<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lgrey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyword"
                    android:textColor="@color/green" />

                <AutoCompleteTextView
                    android:id="@+id/keyword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter the Keyword"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:backgroundTint="@color/green"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="text"/>

                <com.sayyam.eventmaster.helper.MyListView
                    android:id="@+id/suggestion_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/distance_miles"
                    android:textColor="@color/green" />

                <EditText
                    android:id="@+id/distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:hint="@string/enter_the_distance"
                    android:inputType="number"
                    android:text="10"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Category*"
                    android:textColor="@color/green" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:popupBackground="@color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/locationTV"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/auto_detect"
                        android:text="@string/location"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_marginEnd="6dp"
                        android:id="@+id/auto_detect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/locationToggle"
                        android:text="@string/auto_detect"
                        android:textColor="@color/white" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/locationToggle"
                        app:trackTint="@color/grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:minHeight="0dp" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:hint="@string/enter_the_location"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonshape"
                        android:backgroundTint="@color/green"
                        android:minHeight="0dp"
                        android:paddingVertical="10dp"
                        android:text="@string/search"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonshape"
                        android:backgroundTint="@color/orange"
                        android:minHeight="0dp"
                        android:paddingVertical="10dp"
                        android:text="@string/clear"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>